PMM-5850 fix broken styles

--- a/pmm-app/src/pmm-add-instance-app-panel/panel.scss
+++ b/pmm-app/src/pmm-add-instance-app-panel/panel.scss
@@ -1,4 +1,4 @@
-#antd {
+.add-instance-panel-wrapper {
   display: flex;
   flex-direction: column;
   align-content: center;
